feat: get orders and minimal changes
declare profiles at startup.cs
add api endpoints at appsettings.json
update order repository to parse date string from iso
add some dtos for response of api

--- a/orders-bff/api/appsettings.json
+++ b/orders-bff/api/appsettings.json
@@ -6,5 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Client": {
+    "ApiUrl": "http://localhost:8081/v1"
+  },
+  "Order": {
+    "ApiUrl": "http://localhost:8082/v1"
+  }
 }
